--- a/app/src/main/res/layout/activity_day.xml
+++ b/app/src/main/res/layout/activity_day.xml
@@ -6,20 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".Calendar.DayActivity">
 
-<TextView
-    android:id="@+id/date"
-    android:layout_width="0dp"
-    android:layout_height="51dp"
-    android:text="Date"
-    android:textAlignment="center"
-    android:textSize="45dp"
-    android:visibility="visible"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintHorizontal_bias="0.0"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintVertical_bias="0.219" />
+    <TextView
+        android:id="@+id/date"
+        android:layout_width="0dp"
+        android:layout_height="51dp"
+        android:layout_marginTop="8dp"
+        android:text="Date"
+        android:textAlignment="center"
+        android:textSize="45dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.19" />
 
     <Button
         android:id="@+id/goToCalendarButton"
@@ -27,10 +28,10 @@
         android:layout_height="47dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="144dp"
         android:text="Go to calendar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/date" />
 
 </android.support.constraint.ConstraintLayout>
