--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -131,7 +131,7 @@
         app:layout_constraintTop_toBottomOf="@+id/eventStartTime" />
 
     <EditText
-        android:id="@+id/eventEndDate3"
+        android:id="@+id/eventDescription"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginEnd="16dp"
@@ -139,21 +139,19 @@
         android:ems="10"
         android:inputType="textLongMessage"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/eventEndDate6" />
+        app:layout_constraintTop_toBottomOf="@+id/eventLocation" />
 
     <EditText
-        android:id="@+id/eventEndDate5"
+        android:id="@+id/eventNumberOfPeopleAllowed"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/eventEndDate3" />
+        tools:layout_editor_absoluteX="153dp"
+        tools:layout_editor_absoluteY="408dp" />
 
     <EditText
-        android:id="@+id/eventEndDate6"
+        android:id="@+id/eventLocation"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginEnd="16dp"
@@ -175,7 +173,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/createEvent"
+        android:id="@+id/saveEvent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -186,6 +184,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/eventEndDate5" />
+        app:layout_constraintTop_toBottomOf="@+id/eventNumberOfPeopleAllowed" />
 
 </android.support.constraint.ConstraintLayout>
