--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.deneme.caulis.caulis.MainActivity"
-    >
+    tools:context="com.deneme.caulis.caulis.MainActivity">
 
     <ImageView
         android:id="@+id/imageView"
