--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -3,6 +3,13 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <CheckBox
+        android:id="@+id/participateEvent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onCheckboxClicked"
+        android:text="Show only participated event" />
+
     <CalendarView
         android:id="@+id/calendarView"
         android:layout_width="match_parent"
@@ -13,4 +20,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="add event " />
+
+    <Button
+        android:id="@+id/goToEventListButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="See all the event" />
 </LinearLayout>
