--- a/app/src/main/res/layout/activity_mainpage.xml
+++ b/app/src/main/res/layout/activity_mainpage.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="368dp"
         android:layout_height="495dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -17,6 +18,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" />
+
+
 
     </ScrollView>
 
@@ -39,13 +42,33 @@
         app:layout_constraintStart_toEndOf="@+id/MainPage_ProfileButton"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <ImageButton
         android:id="@+id/MainPage_SearchButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+
         android:layout_marginTop="8dp"
-        android:text="Search"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
         app:layout_constraintStart_toEndOf="@+id/MainPage_CalendarButton"
-        app:layout_constraintTop_toTopOf="parent" />
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/search" />
+
+    <ImageButton
+        android:id="@+id/MainPage_LogoutButton"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logout" />
+
+
 
 </android.support.constraint.ConstraintLayout>
