--- a/app/src/main/res/layout/activity_mainpage.xml
+++ b/app/src/main/res/layout/activity_mainpage.xml
@@ -5,24 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
-        android:id="@+id/scrollView2"
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-
-
-
-    </ScrollView>
-
     <Button
         android:id="@+id/MainPage_ProfileButton"
         android:layout_width="wrap_content"
@@ -45,7 +27,7 @@
     <ImageButton
         android:id="@+id/MainPage_SearchButton"
         android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_height="49dp"
 
         android:layout_marginTop="8dp"
         android:adjustViewBounds="true"
@@ -58,7 +40,7 @@
     <ImageButton
         android:id="@+id/MainPage_LogoutButton"
         android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_height="49dp"
 
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
@@ -69,6 +51,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logout" />
 
+    <TextView
+        android:id="@+id/MainPage_MainPageText"
+        android:layout_width="116dp"
+        android:layout_height="38dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/MainPage_ProfileButton" />
 
 
 </android.support.constraint.ConstraintLayout>
