Implementation of the calendarView

--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -64,7 +64,7 @@
         android:layout_marginTop="16dp"
         android:text="Start date"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name" />
+        app:layout_constraintTop_toBottomOf="@+id/vorname" />
 
     <TextView
         android:id="@+id/endDate"
@@ -77,7 +77,7 @@
         app:layout_constraintTop_toBottomOf="@+id/startTime" />
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/vorname"
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:layout_marginStart="16dp"
