--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <CheckBox
         android:id="@+id/participateEvent"
@@ -28,7 +29,7 @@
         android:text="See all the event" />
 
     <Button
-        android:id="@+id/createGroupButton"
+        android:id="@+id/addGroupButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="create a group" />
