--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -50,7 +50,7 @@
         app:layout_constraintTop_toBottomOf="@+id/groupName" />
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/vorname"
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:layout_marginStart="16dp"
@@ -67,7 +67,7 @@
         android:layout_marginTop="16dp"
         android:text="Description"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name" />
+        app:layout_constraintTop_toBottomOf="@+id/vorname" />
 
     <SearchView
         android:id="@+id/groupFindMember"
@@ -94,7 +94,7 @@
         app:layout_constraintTop_toBottomOf="@+id/groupPeopleNumber" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/saveGroupButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
