--- a/app/src/main/res/layout/activity_deneme.xml
+++ b/app/src/main/res/layout/activity_deneme.xml
@@ -41,4 +41,14 @@
         android:text="Yapıştır"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/tiklaButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="148dp"
+        android:layout_marginTop="228dp"
+        android:text="tıkla"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
