--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,7 +69,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logInButton" />
 
-    <Button
+<!--    <Button
         android:id="@+id/denemeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -88,5 +88,6 @@
         android:text="go to calendar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+        -->
 
 </android.support.constraint.ConstraintLayout>
