--- a/app/src/main/res/layout/activity_calendar2.xml
+++ b/app/src/main/res/layout/activity_calendar2.xml
@@ -7,7 +7,7 @@
     android:id="@+id/parent"
     tools:context=".Calendar.CalendarActivity2">
 
-    <com.deneme.caulis.caulis.Calendar.SlidingTabLayout
+    <com.deneme.caulis.caulis.Calendar.Tab.SlidingTabLayout
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
